--- a/app_server/views/rooms.hbs
+++ b/app_server/views/rooms.hbs
@@ -18,8 +18,8 @@
 							<ul id="rooms">
 								{{#each roomInfo}}
 								<li>
-									<a href="/rooms"><img src="images/{{this.image}}" alt="Img"></a>
-									<h2><a href="/rooms">this.name</a></h2>
+									<a href="/api/rooms/{{this.code}}"><img src="images/{{this.image}}" alt="Img"></a>
+									<h2><a href="/api/rooms/{{this.code}}">{{this.name}}</a></h2>
 									{{{this.description}}}
 									<span class="rate">{{this.rate}}</span>
 								</li>
