Added Delete button to trip cards

--- a/app_admin/src/app/trip-card/trip-card.component.html
+++ b/app_admin/src/app/trip-card/trip-card.component.html
@@ -13,7 +13,10 @@
     </p>
     <p class="card-text" [innerHTML]="trip.description"></p>
   </div>
-  <div>
+  <div class="d-flex justify-content-between">
     <button (click)="editTrip(trip)" class="btn btn-info">Edit</button>
+    <button class="btn btn-danger" (click)="openConfirmationDialog(trip)">
+      Delete
+    </button>
   </div>
 </div>
