--- a/app_admin/src/app/trip-card/trip-card.component.html
+++ b/app_admin/src/app/trip-card/trip-card.component.html
@@ -13,7 +13,7 @@
     </p>
     <p class="card-text" [innerHTML]="trip.description"></p>
   </div>
-  <div class="d-flex justify-content-between">
+  <div class="d-flex justify-content-between" *ngIf="isLoggedIn()">
     <button (click)="editTrip(trip)" class="btn btn-info">Edit</button>
     <button class="btn btn-danger" (click)="openConfirmationDialog(trip)">
       Delete
